# eren

./: Cargo.toml  README.md
src/: main.rs
src/helpers/: is_terminal.rs  mod.rs  name_provider.rs  play_manager.rs  provider_num.rs  reqwests.rs  selection.rs
src/providers/: allanime.rs
