[package]
name = "eren"
authors = ["BASED"]
license = "GPL-3.0"
version = "0.2.6"
edition = "2021"
description = "Stream & Download Animes from your terminal"
keywords = ["anime", "allanime", "gogoanime", "cli", "scraper"]
repository = "https://github.com/Based-Programmer/eren"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
clap = "3.2.25"
isahc = { version = "1.7.2", features = ["json", "text-decoding"], default_features = false }
url = "2.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
hex = "0.4.3"
skim = "0.10.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
