[package]
name = "eren"
authors = ["BASED"]
license = "GPL-3.0"
version = "0.3.0"
edition = "2021"
description = "Stream & Download Animes from your terminal"
keywords = ["anime", "allanime", "gogoanime", "cli", "scraper"]
repository = "https://github.com/Based-Programmer/eren"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
clap = { version = "4.5.4", features = ["cargo"] }
isahc = { version = "1.7.2", features = ["json", "text-decoding"], default_features = false }
url = "2.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
hex = "0.4.3"
skim = { version = "0.10.4", default_features = false }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
