[package]
name = "eren"
authors = ["BASED"]
license = "GPL-3.0"
version = "0.3.4"
edition = "2021"
description = "Stream & Download Animes from your terminal"
keywords = ["anime", "allanime", "gogoanime", "cli", "scraper"]
repository = "https://github.com/Based-Programmer/eren"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.5", features = ["cargo"] }
isahc = { version = "1.7.2", features = ["json", "text-decoding"], default-features = false }
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
skim = { version = "0.10", default-features = false }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
